tests/errors/sem_call21.java
public class sem_call21 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , true );
}
}